--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "scripts": {},
+    "scripts": {
+        "dev": "nodemon -r tsconfig-paths/register app.ts -w"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/alfianandinugraha/express-typescript-mvc.git"
@@ -14,5 +16,20 @@
     "bugs": {
         "url": "https://github.com/alfianandinugraha/express-typescript-mvc/issues"
     },
-    "homepage": "https://github.com/alfianandinugraha/express-typescript-mvc#readme"
+    "homepage": "https://github.com/alfianandinugraha/express-typescript-mvc#readme",
+    "devDependencies": {
+        "dotenv": "^8.2.0",
+        "nodemon": "^2.0.4",
+        "ts-node": "^8.10.2",
+        "tsconfig-paths": "^3.9.0",
+        "typescript": "^3.9.5"
+    },
+    "dependencies": {
+        "@types/body-parser": "^1.19.0",
+        "@types/express": "^4.17.6",
+        "@types/node": "^14.0.14",
+        "body-parser": "1.19.0",
+        "express": "^4.17.1",
+        "ejs": "^3.1.1"
+    }
 }
