--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "@types/express": "^4.17.6",
         "@types/node": "^14.0.14",
         "body-parser": "1.19.0",
+        "ejs": "^3.1.1",
         "express": "^4.17.1",
-        "ejs": "^3.1.1"
+        "express-edge": "^2.0.2"
     }
 }
